fixes footer on small screens

--- a/client/styles/_base.sass
+++ b/client/styles/_base.sass
@@ -142,8 +142,11 @@ footer
     height: 50px
     display: flex
     align-items: center
-    span
-        padding-left: $spacer-3
+    padding-left: $spacer-1
+    @media all and (min-width: 550px)
+        span
+            padding-left: $spacer-3
+            font-size: $text-1
 
 
 .social-icon
